--- a/docs/zh/2022/a10.md
+++ b/docs/zh/2022/a10.md
@@ -1,5 +1,14 @@
 # 打卡记录
 
+## 2022-10-23
+
+星期天
+
+* 已经上班2周了，节奏很快，每天都过的很充实。华为出来的项目总监，搞成了83836了，强度有点大了，先做着吧，都没时间搞面试了。
+* 妙头的玩具店，被强制下架了，因为产品被查侵权。所以我让妙头整理运营店铺的主流程，然后总结经验，再来实践，并且从实践中再总结再实践，这样就能慢慢地往前进了。可是沟通得不是很顺畅，妙头有种被逼迫的感觉，我是真的希望能搞好店，这样一切都能往好的方向发展。（可是看妙头的做事风格，似乎已经习惯了没有目标，走一步看一步，随机应变，有挫折就哭，有喜悦就大笑。我也不好再介入，所以我还是要控制住自己，多做少说！）
+* 今天把CPU的笔记总结完成了，基本上算是详细且理解了。而且已经让妙帮我拍了用于gitee审核实名认证的照片，待审核通过后，把笔记单独发到gitee上，这样能节省掉流量费。
+* 今天一天假，一下就过完了，上午10点起床，中午吃的鱼面，下午和妙头看电视剧《底线》，晚上吃的椰子鸡火锅，吃完后8点多去做核酸，买了杯5.5的奶茶去大沙河散步，算是充实的一天了。
+
 ## 2022-10-16
 
 星期天
@@ -9,7 +18,7 @@
 * CPU指令篇已经实现了取指周期、MOV指令、算术运算指令和逻辑运算指令，继续实现剩下的指令，加油啊。
 * 前天已经看完了《鬼吹灯之昆仑神宫》了，和妙妙头一起看的，很有意思的故事。
 * 这周去华瀚科技下的数研锦瀚子公司的智慧城市事业部上班了，前4天晚上下班很早。后面项目组开卷了，基本上是886了。说是项目很紧，11月30号上线，内部有2个时间节点，分别是10月30号和11月30号。而刚任命的项目总监是华为出来的，所以把华为的方式带到这小公司了，但是又没有对齐的补偿。这总是感觉不大对劲的，资本压榨也就这样了。看来还是先一边上班一边学习，时刻准备着找工作。（如果行情好转的话，应该是可以的，小兵放弃了惠彩，17号去入职建信金科，等着小兵内推，哈哈）
-* 昨天去加班了，刚开始第一周就上了8天班，感觉一直在上班，今天放假一天，中午应小灰灰邀请，去吃顿饭，粘粘他结婚的喜气。
+* 昨天去加班了，刚开始第一周就上了8天班，感觉一直在上班，今天放假一天，中午应小灰灰邀请，去吃顿饭，粘粘他结婚的喜气。（只去了几个人，老左，小强，小灰灰，小东，下午去小耗子那聊了下天）
 * 从2020年打卡至今，一直在循环中折腾，如何使用正念进入小世界，然后纠正身体的行为。所以感觉要多多休息正念，让自己具备更多的自控力。加油吧，大刚！
 * 现在去上班了，妙头在家弄自己的店，也算是恢复到6月份之前的状态了。但是还是得好好加油，我需要在工作中提升，也要修行猫大刚主页的基础，为自己打造良好的基础。另一方面，好好经营和妙的感情，虽然很难进入下一个步骤，被卡在深圳买房了。但还是得好好照顾妙头的情绪，稳稳经营，争取明年将妙头带回老家。
 * 对于目前的工作的几点总结：
