--- a/docs/zh/2022/a10.md
+++ b/docs/zh/2022/a10.md
@@ -1,5 +1,17 @@
 # 打卡记录
 
+## 2022-10-31
+
+星期一
+
+* 今天是10月的最后一天，一个月一下子就过完了。从8号开始上班，这个月每个周6都加了班，由于项目赶进度，从最开始6点下班，到8点，再到8点30，甚至还想让我们到10点，大家集体表示抗议。我只是个打工人，只想搞钱，不想玩命。
+* 在华瀚科技，已经上班一个月，是没有华为的钱，却有着华为的项目总监式管理，这啥啊这是，简直就是耍流氓。但是今天的新人培训会议，介绍了10月入职了24个人，这也从侧面反应了现在市场上的行情差，不然这公司这么低的待遇和福利，大家也不会为了生活委曲求全进来。而且文韬也开始找工作了，说是在投递简历，但是没有面试机会。
+* S12已经接近尾声，就剩T1和DRX的决赛在下周打了。LPL今年，TES16强，RNG和EDG8强，JDG4强，真是拉胯啊！
+* 坏习惯，看来只有零次和很多次，不会只有1次。要学会正念，然后以超越肉体的视角来审判恶念。加油吧！
+* 上周5是细二爷的生日，翠姐去梅家湾赶生了，说没有了往日的热闹。这也是没有办法的事情，大家都在外地，也不知道在忙碌着些啥，就像是在慢慢等待着遗憾到来一样，不得法。
+* 上周gitee走了实名认证流程，且通过了。然后我就将CPU的修行给迁移出来，具体请查看[CPU修行](https://mgang.gitee.io/sn-cpu/)。
+* 要整理修行计划，不断充电自己，为未来努力，抓住机会。加油啊！！！
+
 ## 2022-10-23
 
 星期天
