--- a/docs/zh/2022/a11.md
+++ b/docs/zh/2022/a11.md
@@ -9,3 +9,4 @@
 * 今天完善了下`sn-cpu`的在线文档，更换了百度统计探针，新增了友情链接，加上了gitalk的评论系统，但是发现需要github的网络稳定才能良好使用。
 * 文韬从10月份开始找工作，投简历，今天问他面试怎么样，他回答到没有面试机会。
 * 通过刷B站的操作系统视频，逐渐发现vs code的强大，集成了markdown的相关插件，和画图drawio，让图片以文件方式存放。
+* mg.meiflower.top的https证书失效了，需要找时间处理。腾讯云轻量级服务器也过期了，我主动销毁了，后续看机会购买合适服务器。
