--- a/docs/zh/2022/a11.md
+++ b/docs/zh/2022/a11.md
@@ -1,5 +1,11 @@
 # 打卡记录
 
+## 2022-11-08
+
+星期二
+
+* 不知道为什么，我感觉她既熟悉又陌生。我在她面前，总是胆战心惊的，时常因为说了一些话，让她变成冰块。今晚也许是我的话语，让她觉得我嫌弃她了。但当她问我时，我否认道，她却也不见相信。我想说，我真的没有，我只是想改变自己，也想着她能一起变好。这样一起成长，一起读书，共同迎接生活的苦难，一起分享生活的喜悦。我也渐渐发现到，如果我不主动去碰某一个问题时，那么这段时间就能相安无事。但如果提前解锁，或者以悲观负面的情绪和她沟通时，基本上都会触碰到她敏感的神经。但是，其实我们是相爱的，至少这2年来的朝夕相对是不可否认的事实。我因为她说如果她和我分开，她以后以一辈子不谈恋爱的这句话，决定不离不弃。说实话，我们俩是败给了现实。而疫情则加速了这种挫败，因为前途的迷茫，在深圳买房就像是天方夜谭痴人说梦。我目前的工作水深火热，看不到希望，才会被负能量影响；而她的店铺也因为玩具枪托的下架变得不复从前，本来双方事业上都是严峻的形式，原以为爱情能让我们更加融合，可今晚还是造成这样的局面。而我认为2个人在一起，应该携手共进。我会选择毫无保留地爱你，是我真的爱你，会包容你的任性，你的脾气。有时候我觉得我真是傻，为什么我要先把她惹哭，然后再低下头恳求她的原谅？她也是这么说的，为啥你要说这些，把我弄哭，然后又道歉呢？我之前是这么回答的，我从来没有想过要先把你弄哭，再去哄你。有时候我去提的其实都是现实，就算现在不提，时间到了还是会遇到。（其实这个不一定，就像今晚的事情，本来这段时间我天天加班，每天早出晚归，很累了，也没空陪她。这个时候，不适合抱怨，应该一起渡过难关），所以今晚这事纯粹是我自找的。每次都会陷入一种怪圈，说着说着她不说话了，我就一直说，接着她眼泪打转，我就不说了。只是一个劲的给她递纸巾，然后说着道歉的话语，寻找自己错在哪里，祈求她的原谅。以前大多是能和好的，尽快也会花费很多时间，但是还是会和好的。而今晚，似乎很严重了，我见没哄好，时间快到11点了，就去洗澡了。她发了条微信说出去走一下，也不接电话，也不回语音，吓的我发了45条微信给她，微信语音和手机打了好多次。最后通过分析，在村门口对面的石桌找到了她。还好找到了，不过你如何对我，自己要对自己好一点。本以为回来后，能像以前一样解开问题，可这一次，我软也服了，道歉也说了，但她说不接受道歉，也不能原谅。然后我就没办法了，就出来写写自己的心情，因为反正是睡不着的了（我从没想过会这样通宵一次）。就让她自己好好排解吧，给予适当的空间，让她慢慢缓解了。也许她会因为我可怜，后面就原谅我了也说不定呢。
+
 ## 2022-11-05
 
 星期六
