--- a/docs/zh/2022/a11.md
+++ b/docs/zh/2022/a11.md
@@ -1,5 +1,16 @@
 # 打卡记录
 
+## 2022-11-20
+
+星期天
+
+* 时间飞逝，一下子就到了11月下旬了，2022年差不多也过完了。今年疫情反反复复，导致工作形式不容乐观。
+* 最近妙的朋友邓丽琴来深圳，在207住了3晚，这几天妙头和她说了很多话，心情也逐渐恢复。她请我们吃了蛋糕，喝了奶茶，因为她从广州来被隔离不能出门，所以我们没有一起出门逛逛。我在客厅睡了3晚午休床，为妙头她们提供空间。
+* 最近华瀚的项目越来越紧，都要求周末加班2天了，而且上层领导勾心斗角，相互不满，估计项目会崩盘。作为底层开发人员，还是做好自己的本职工作，然后从工作中吸取经验并总结，提升自己才是王道。
+* 双11，没什么动静。因为腾讯云去年买的2H4G的轻量级docker服务器过期了，而且master也在月底即将过期。所以我将master和node1上的k8s关闭了，购买了华为云1年的服务器hw。并将card相关的服务迁移到hw服务器，使用docker-compose工具来部署到docker内。
+* mg.meiflower.top的https证书过期，已更新，续期3个月。
+* 今天下午4点去了民治看牙，终于进入了第3阶段。一共12副，已经拿到了6副。本来9月就应该开始的，结果中间牙套流程出错，加上王明伟医生的工作调动，到今天才算是真正开始第3阶段。一副牙套戴10天，一共120天，约
+
 ## 2022-11-08
 
 星期二
@@ -12,7 +23,7 @@
 
 * 昨天和妙一起看了电影放松了下，《假期历险记》，很好看，很好笑，特别有意思，看的很放松。妙头今天下午去骑车了，3点出发到6点回，然后炒了米粉我吃，好好吃呢。
 * 又是加班的一周，明天要加班，上面2个领导不对付，一直争吵，搞的组内气氛不和谐。项目进度紧，大家都说太卷了，但是外面市场行情又不好，只能苟着。一周内有2，3个人离开了，我们笑着说今天欢迎，明天欢送。
-* 今天完善了下`sn-cpu`的在线文档，更换了百度统计探针，新增了友情链接，加上了gitalk的评论系统，但是发现需要github的网络稳定才能良好使用。
+* 今天完善了下 `sn-cpu`的在线文档，更换了百度统计探针，新增了友情链接，加上了gitalk的评论系统，但是发现需要github的网络稳定才能良好使用。
 * 文韬从10月份开始找工作，投简历，今天问他面试怎么样，他回答到没有面试机会。
 * 通过刷B站的操作系统视频，逐渐发现vs code的强大，集成了markdown的相关插件，和画图drawio，让图片以文件方式存放。
 * mg.meiflower.top的https证书失效了，需要找时间处理。腾讯云轻量级服务器也过期了，我主动销毁了，后续看机会购买合适服务器。
