--- a/docs/zh/2022/a11.md
+++ b/docs/zh/2022/a11.md
@@ -9,7 +9,7 @@
 * 最近华瀚的项目越来越紧，都要求周末加班2天了，而且上层领导勾心斗角，相互不满，估计项目会崩盘。作为底层开发人员，还是做好自己的本职工作，然后从工作中吸取经验并总结，提升自己才是王道。
 * 双11，没什么动静。因为腾讯云去年买的2H4G的轻量级docker服务器过期了，而且master也在月底即将过期。所以我将master和node1上的k8s关闭了，购买了华为云1年的服务器hw。并将card相关的服务迁移到hw服务器，使用docker-compose工具来部署到docker内。
 * mg.meiflower.top的https证书过期，已更新，续期3个月。
-* 今天下午4点去了民治看牙，终于进入了第3阶段。一共12副，已经拿到了6副。本来9月就应该开始的，结果中间牙套流程出错，加上王明伟医生的工作调动，到今天才算是真正开始第3阶段。一副牙套戴10天，一共120天，约
+* 今天下午4点去了民治看牙，终于进入了第3阶段。一共12副，已经拿到了6副。本来9月就应该开始的，结果中间牙套流程出错，加上王明伟医生的工作调动，到今天才算是真正开始第3阶段。一副牙套戴10天，一共120天，约4个月。
 
 ## 2022-11-08
 
