--- a/docs/zh/2022/a11.md
+++ b/docs/zh/2022/a11.md
@@ -1,5 +1,17 @@
 # 打卡记录
 
+## 2022-11-29
+
+星期二
+
+* 纠结了好久后，还是决定从华瀚科技数研锦瀚离职了，具体离职日期是11月25号。主要离职原因还是长时间的加班，再加上团队内管理混乱，让人看不到希望，所以还是不顾外面大环境不好毅然离职了。经过统计，在上班49天的时间里，共计上班37天，休息6天，加班6天，工作日加班50多小时，总共45/49=92%的工作时间投入，让身体疲惫不堪。所以还是最后大部分人还是会顶不住强度，选择另外一种生活吧。
+* 近段时间世界杯开始了，也让人知道了卡塔尔这么一个每天只用工作到下午3点的富裕小国家，只能投去羡慕的眼光。再者看到世界杯里球赛场馆内的热血沸腾的场景，对比着国内疫情下显露的恶性人脸，底层人民水深火热但有人却故布迷阵只为从中赚钱。果然，在灾难面前，有人在前方成为光，也有人躲在黑暗里使坏，希望国家能尽快调整策略，维护社会的稳定，让老百姓能幸福安康。
+* 明天是30号，是华瀚发工资的日子，虽然是发的10月份的工资，但是还是有一点期待，因为太久没有入账了，11月份的工资则需要到12月30好发放，2笔共计4万多一点，也算是对这一段43天工作的报酬。
+* 由于服务器docker和master先后过期，所以将个人项目从k8s/k3s环境迁移到hw服务器（2C4G)的docker环境内部署。目前所用到的服务，基本迁移完成，具体清单后续会整理到程序猫大刚主页中。
+* 上周末，妙头回了躺惠州，因为她很长时间没回想家了。本来我也去的，可是因为我又失业了，就没去了。还是着手复习，然后面试突击一周再开放简历，努力找工作吧。加油啊，大刚！！！
+* 最近刷B站，了解到程序员[鱼皮](https://github.com/liyupi)，在腾讯，发布了SQL之父的开源项目等；还了解到龙进，发布了自研的[DrangonOS](https://dragonos.org/)操作系统；还有大神踌躇月光，发布了关于CPU和x86汇编语言，以及onix操作系统的视频课程，值得学习。
+* 关于妙头的店，经过妙头一段时间的运营，慢慢有了一些好转，继续加油啊！！
+
 ## 2022-11-20
 
 星期天
