--- a/docs/zh/2022/a11.md
+++ b/docs/zh/2022/a11.md
@@ -10,7 +10,7 @@
 * 由于服务器docker和master先后过期，所以将个人项目从k8s/k3s环境迁移到hw服务器（2C4G)的docker环境内部署。目前所用到的服务，基本迁移完成，具体清单后续会整理到程序猫大刚主页中。
 * 上周末，妙头回了躺惠州，因为她很长时间没回想家了。本来我也去的，可是因为我又失业了，就没去了。还是着手复习，然后面试突击一周再开放简历，努力找工作吧。加油啊，大刚！！！
 * 最近刷B站，了解到程序员[鱼皮](https://github.com/liyupi)，在腾讯，发布了SQL之父的开源项目等；还了解到龙进，发布了自研的[DrangonOS](https://dragonos.org/)操作系统；还有大神踌躇月光，发布了关于CPU和x86汇编语言，以及onix操作系统的视频课程，值得学习。
-* 关于妙头的店，经过妙头一段时间的运营，慢慢有了一些好转，继续加油啊！！
+* 关于妙头的店，经过妙头一段时间的运营，慢慢有了一些好转，继续加油啊！！！
 
 ## 2022-11-20
 
