--- a/docs/zh/2022/a12.md
+++ b/docs/zh/2022/a12.md
@@ -7,7 +7,8 @@
 * 下午和妙一起去了西丽的百旺草莓园，路上些许波折，最后还是在4点半左右到了草莓园。草莓园约30厢草莓，去的大多是女生，三五成对的边摘边拍照。我和妙摘了约30分钟，就商量着离开了。然后洗了草莓吃了几个，回来走到公交站，坐车回到西丽。然后去366大街，买了喜欢吃的小吃，吃罢就走路回来了。回来后看着《亲亲日常》，喝着下午出门前煮的鸡肉藕玉米汤，还吃了面包店买的面包，这一天过的太饱满幸福了。
 * 今天大家庭群里，翠姐给大二爷送上了祝福，然后我俩先后发了小红包庆贺。可大人们有自己的礼数，所以也没能把群热起来，就此作罢。
 * 这几天因为B站的限时任务，录制了视频，真正地成为了一名UP主。随后将陆续把自己的一些想分享的东西，分享到网上，希望能帮助到一些人。
+* 从华瀚小房间群里，知道了原来项目组被劝退了，之前的小伙伴也是被辞退了，拿到的微不足道的一星期补偿，这世道真的是差啊，这公司是真的坑啊。
 * 要尽快搞面试突击了，然后开始面试，希望能在过年前再就业成功。外面也不再强制测核酸了，是不是行情会慢慢好一些呢？
 * 今天注册了openAI发布的chatGPT聊天机器人，然后试用了下尝尝鲜，不过不要沉迷，拖延了大事。
 * 前几天自己找了个todolist，搭建部署到了todo.meiflower.top上，以后就使用这个来日事日毕。
-* 翠姐上周过生日了，发了500的红包，然后晚上给打了视频电话说了生日快乐。也知道了老板在家里说手上没钱用，通话后给发了1000到他微信，
+* 翠姐上周过生日了，发了500的红包，然后晚上给打了视频电话说了生日快乐。也知道了老板在家里说手上没钱用，通话后给发了1000到他微信，希望家里一切都好。
