--- a/docs/zh/2023/a01.md
+++ b/docs/zh/2023/a01.md
@@ -12,4 +12,4 @@
 * 昨天晚上，我和妙又造作了一番。开了2个电视剧，分别是靳东的《终有疾风起》和刘亦菲的《去有风的地方》，然后在1点左右先后点了2顿烧烤，看着电视，喝着可乐，太造作了，3点才睡觉！！！（以后不能这样了啊，要排毒啊，好好睡觉！！！)
 * 这段时间晚上有空就看1个小时的3体小说，目前已经看到《黑暗森林》的下篇了，越来越精彩了。
 * 今天下午打扫了卫生，把洗衣机也洗了一通，用时40分钟吧。
-* 妙头最近接了一个兼职，在弄着，
+* 妙头最近接了一个兼职，在弄着，有一点复杂，希望能好好搞好吧。
