--- a/docs/zh/2023/a02.md
+++ b/docs/zh/2023/a02.md
@@ -1,5 +1,14 @@
 # 打卡记录
 
+## 2023-02-07
+
+星期二
+
+* 周天下午和妙头儿一起去看了《满江红》，感觉还行！莫等闲，白了少年头，空悲切！
+* 昨天因为妙说想去香港，然后就核对了居住证和港澳通行证，居住证过期了，需要重新申请。下午就去照了相片，并且在网上申请了业务，预计15天内出证，后续再就是去弄香港签证了！
+* 这2天陆续更新了B站上的docsify的视频合集，在插件篇发力，今天开发了3个插件，分别是docsify-baidu-tj、docsify-giscus和docsify-gitalk。然后录制对应的视频，发布到B站，分享给更多需要的人。
+* 今天是爹爹生日，在群里给爸爸发了
+
 ## 2023-02-03
 
 星期五
@@ -11,4 +20,4 @@
 * 这次回来后，我发现我特别的粘妙头儿了，很爱很爱呢！
 * 昨天下午我去拿了第三阶段最后的6副牙套，然后美团上花了41元做了个洗牙抛光套餐！本来要咨询一下美白的，等了30分钟后就回了。后面再看吧，其实牙齿不是很黄的话，就不需要美白了！
 * 2023年了，今年我要30岁了，而立之年，要努力啊！让自己变得更好，更自律，更有保护力！以后打卡，一天一打！努力自律，改掉坏习惯！拥抱美好生活！
-* （）)接下来的一周，做好面试突击计划，然后一周后开始面试，找工作！
+* （待商量)接下来的一周，做好面试突击计划，然后一周后开始面试，找工作！
