完成打卡日历的vue2页面

--- a/docs/zh/2023/a02.md
+++ b/docs/zh/2023/a02.md
@@ -7,7 +7,7 @@
 * 周天下午和妙头儿一起去看了《满江红》，感觉还行！莫等闲，白了少年头，空悲切！
 * 昨天因为妙说想去香港，然后就核对了居住证和港澳通行证，居住证过期了，需要重新申请。下午就去照了相片，并且在网上申请了业务，预计15天内出证，后续再就是去弄香港签证了！
 * 这2天陆续更新了B站上的docsify的视频合集，在插件篇发力，今天开发了3个插件，分别是docsify-baidu-tj、docsify-giscus和docsify-gitalk。然后录制对应的视频，发布到B站，分享给更多需要的人。
-* 今天是爹爹生日，在群里给爸爸发了
+* 今天是爹爹生日，在群里给爸爸发了生日祝福。
 
 ## 2023-02-03
 
